Add: feature read, create and assign role in modules roles
